# PingPong

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: phase-execution-workflow.md  production-readiness-plan.md  production-readiness-rules.md  production-readiness-status-rule.md
docs/plan/: runtime-state-dispatch-plan.md
docs/rule/: production-readiness-rules.md
sample/: loopback_example.c  main_example.c  master_example.c  multi_instance_example.c  role_switch_example.c  slave_example.c
src/: CMakeLists.txt  README.md  ping_pong.c  ping_pong.h  ping_pong_config.h  ping_pong_port.h
test/: CMakeLists.txt  test_default_config.c  test_identity_v2.c  test_identity_v2_packet.c  test_master_auto_restart.c  test_master_bad_packet_tolerance.c  test_ping_pong.c  test_ping_pong_extensions.c  test_ping_pong_migrated.c  test_runtime_state_transitions.c
